--- a/src/index.css
+++ b/src/index.css
@@ -57,39 +57,54 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+.orange-gradient {
+  background: #ff8614;
+  background: linear-gradient(-90deg, #ff8018 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #804dee 0%,
-    rgba(60, 51, 80, 0) 100%
+    #f58300 0%,
+    #f12711 100%
   );
 }
 
-.green-pink-gradient {
-  background: "#00cea8";
-  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+.violet-gradient {
+  background: #ff8614;
+  background: linear-gradient(-90deg, #ff8018 0%, rgba(60, 51, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    -90deg,
+    #f58300 0%,
+    rgba(60, 51, 80, 0) 100%
+  );
 }
-
-.blue-pink-gradient {
-  background: "#00cea8";
-  background: linear-gradient(90.13deg, #2f80ed 1.9%, #b356ff 97.5%);
-  background: -webkit-linear-gradient(-90.13deg, #2f80ed 1.9%, #b356ff 97.5%);
-}
-
-.orange-text-gradient {
+/* USE ON CREME BG */
+.orange-red-text-gradient {
   background: #f12711; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to top,
-    #f12711,
-    #f5af19
+    #cc1602,
+    #ff7403
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to top,
+    #cc1602,
+    #ff7403
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+/* USE ON BROWN BG */
+.fire-text-gradient {
+  background: #f12711; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
     #f12711,
-    #f5af19
+    #ffe241
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f12711,
+    #ff821cff,
+    #ffe241
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
